--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             <img src="dist/img/game2.png" alt="game1" class="img-responsive"/>
                         </div>
                         <h3 class="gameName">
-                            Baccarat
+                            Bitcoin blackjack
                         </h3>
                         <button class="btn btn-playGame">play game</button>
                     </a>
@@ -132,7 +132,7 @@
                             <img src="dist/img/game3.png" alt="game1" class="img-responsive"/>
                         </div>
                         <h3 class="gameName">
-                            Baccarat
+                            Asia Gaming
                         </h3>
                         <button class="btn btn-playGame">play game</button>
                     </a>
@@ -144,7 +144,7 @@
                             <img src="dist/img/game4.png" alt="game1" class="img-responsive"/>
                         </div>
                         <h3 class="gameName">
-                            Baccarat
+                            Booming bananas
                         </h3>
                         <button class="btn btn-playGame">play game</button>
                     </a>
