--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <a href="https://bitcasino.io/?ref=sliderBanner" target="_blank">
                     <img src="dist/img/sliders/slide2.jpg" alt="promo 2">
                     <div class="carousel-caption">
-                      <h2>Play Bitcasino.io</h2>
+                      <h2>mɃ 2,000 welcome package to Play Bitcasino.io</h2>
                       <p>1,300+ top casino games</p>
                       <a href="https://bitcasino.io/?ref=sliderBanner" class="btn btn-signUp">sign up to play</a>
                     </div>
